--- a/PAGE2/product.html
+++ b/PAGE2/product.html
@@ -14,6 +14,8 @@
         <!-- Inclua aqui os elementos de filtro, se necessário -->
     </header>
 
+    <canvas></canvas>   
+    
     <main>
         <section id="product-list">
             <!-- Os produtos serão carregados aqui dinamicamente -->
